[package]
name = "mngr"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.14"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
dotenv = "0.15.0"
serde = "1.0.110"
serde_json = "1.0.53"
chrono = "0.4.11"
