[package]
name = "mngr"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies.webserver_contracts]
path = "../webserver/libs/webserver_contracts"

[dependencies.webserver_client]
path = "../webserver/libs/client"

[dependencies]
structopt = "0.3.14"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
dotenv = "0.15.0"
serde = "1.0.110"
serde_json = "1.0.53"
chrono = "0.4.11"
lazy_static = "1.4.0"
regex = "1.3.9"
