[package]
name = "mngr"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.14"
tokio = { version = "1.3", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
dotenv = "0.15.0"
serde = "1.0.110"
serde_json = "1.0.53"
chrono = "0.4.11"
lazy_static = "1.4.0"
regex = "1.3.9"
rusqlite = "0.23.1"
sysinfo = "0.15.3"
webserver_client = { git = "https://github.com/ijagberg/webserver_client", branch = "main" }
webserver_contracts =  { git = "https://github.com/ijagberg/webserver_contracts", branch = "main" }
uuid = "0.8.2"
